Add Spark example, release 1.0.3 with unshaded JAR option to allow fine-grained dependency inclusions/exclusions